# natural2lean

./: .gitignore  LICENSE  README.md  lakefile.lean  pyproject.toml  requirements.txt  setup.py
Lean/: Main.lean  lakefile.lean
Lean/LeanUtils/: Div.lean  Logic.lean  Parity.lean  Specific.lean  Tactic.lean
LeanUtils/: Div.lean  Parity.lean  Tactics.lean
lea/LeanUtils/: Div.lean  Tactic.lean
lean/: LeanUtils.lean  Main.lean  lakefile.lean
lean/LeanUtils/: Tactic.lean
natural2lean/: __init__.py
natural2lean/elements/: __init__.py  matching_interface.py
natural2lean/math_mode/: __init__.py  equation.py  expression.py  identifier.py  identifiers_in_set.py  math.py  multiple_identifiers.py  set.py  translate_math.py
natural2lean/propositions/: function.py  implication.py  multiple_propositions.py  proposition.py
natural2lean/structure/: __init__.py  matching.py  proof.py  theorem.py
natural2lean/text/: __init__.py  have.py  implication.py  multiple_propositions.py  proof.py  proposition.py  such_that.py  theorem.py  using.py
natural2lean/utils/: __init__.py  indentation.py  separate_propositions.py  translate_math.py  unfolding.py
src/elements/: MatchingInterface.py
src/math_mode/: math.py  translate_math.py
src/natural2lean/: __init__.py  __main__.py  translator.py
src/natural2lean-old/: translator.py
tests/: easy_testing.py  examples.py  exploration_testing.py  test_translate_math.py
tests-old/math_mode/: test_equation.py
tests-old/structure/: test_theorem.py
tests-old/utils/: test_unfolding.py
tests/math_mode/: test_equation.py  (+4 more)
(+108 files in other folders)
