[build-system]
requires = [
    "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[project]
name = "natural2lean"
version = "0.0.3"
description = "Translation of proofs from Natural Language to Lean"
readme = "README.md"
authors = [{ name = "Augustin d'Oultremont", email = "augustin.doultremont@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["auto-formalization", "parser"]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "pytest>=3.6"]

[project.urls]
Homepage = "https://github.com/Augustindou/natural2lean"
